--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -148,15 +148,11 @@ jobs:
           command: |
             docker pull owasp/zap2docker-stable
             (
-              docker run --detach --name zap -u zap -p 8090:8090 -v "$(pwd)/reports":/zap/reports/:rw  \
-                -i owasp/zap2docker-stable zap.sh -daemon -host 0.0.0.0  \
-                -port 8090 \
-                -config api.disablekey=true        
-              docker exec zap \
-                zap-cli active-scan \
-                --spider\
-                https://google-gruyere.appspot.com/409976138208656853771250675759008232039/ \
-                -l High     
+              docker run --detach --name zap -u zap -p 8090:8090 -d owasp/zap2docker-stable zap.sh -daemon -port 8090 -host 0.0.0.0 -config api.disablekey=true       
+              docker exec zap zap-cli open-url 'https://google-gruyere.appspot.com/409976138208656853771250675759008232039/'
+              docker exec zap zap-cli active-scan 'https://google-gruyere.appspot.com/409976138208656853771250675759008232039/'
+              docker logs zap
+             
               
                   
               if [ $? -ne 1 ]; then exit 0; else exit 1; fi;
