--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -148,10 +148,10 @@ jobs:
           command: |
             docker pull owasp/zap2docker-stable
             (
-              docker run --detach --name zap -u zap -v "$(pwd)/reports":/zap/reports/:rw \
+              docker run --detach --name zap -u root -v "$(pwd)/reports":/zap/reports/:rw \
                 -i owasp/zap2docker-stable zap.sh -daemon -host 0.0.0.0 -port 8080 \
                 -config api.disablekey=true
-              docker exec zap zap-cli --verbose quick-scan http://www.itsecgames.com
+              docker exec zap zap-cli quick-scan http://www.itsecgames.com
               docker exec zap zap-cli --verbose report -o /zap/reports/owasp-quick-scan-report.json --output-format json
               
 
