--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -148,10 +148,8 @@ jobs:
           command: |
             docker pull owasp/zap2docker-stable
             (
-              docker run --name zap -u root -v "$(pwd)/reports":/zap/reports/:rw \
-                -i owasp/zap2docker-stable zap.sh -daemon -host 0.0.0.0 -port 8080 \
-                -config api.disablekey=true
-              docker exec zap zap-cli quick-scan http://www.itsecgames.com
+              docker run -v $(pwd):/zap/wrk/:rw -t owasp/zap2docker-stable zap-full-scan.py \
+                -t https://google-gruyere.appspot.com/409976138208656853771250675759008232039/ -g gen.conf -r testreport.html
               
               
                   
