--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -144,7 +144,14 @@ jobs:
           # Only fail on error code 1, which indicates at least one FAIL was found.
           # error codes 2 & 3 indicate WARN or other, and should not break the run
           name: Run OWASP ZAP Baseline
-          
+          #docker run -v $(pwd):/zap/wrk/:rw -t owasp/zap2docker-stable zap-baseline.py \
+           #     -t https://google-gruyere.appspot.com/409976138208656853771250675759008232039/ -g gen.conf -r testreport.html
+            #  docker run -i owasp/zap2docker-stable zap-cli quick-scan --self-contained \
+             #   --start-options --spider '-config api.disablekey=true' https://google-gruyere.appspot.com/409976138208656853771250675759008232039/
+              #docker run --name zap -u root -v "$(pwd)/reports":/zap/reports/:rw \
+               # -i owasp/zap2docker-stable zap.sh -daemon -host 0.0.0.0 -port 8080 \
+                #-config api.disablekey=true
+              #docker exec  --zap-path zap  zap-cli quick-scan http://www.itsecgames.com
           command: |
             docker pull owasp/zap2docker-stable
             (
@@ -157,6 +164,7 @@ jobs:
                 --spider\
                 https://google-gruyere.appspot.com/409976138208656853771250675759008232039/ \
                 -l  Medium
+              docker exec zap zap-cli --verbose report -o /zap/reports/owasp-quick-scan-report.html --output-format html
                   
               if [ $? -ne 1 ]; then exit 0; else exit 1; fi;
             )
