--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -161,11 +161,11 @@ jobs:
           command: |
             docker pull owasp/zap2docker-stable
             (
-              docker run --detach --name zap -u zap -v               
-              "$(pwd)/reports":/zap/reports/:rw \
-  -i owasp/zap2docker-stable zap.sh -daemon -host 0.0.0.0 -port 8080 \
-  -config api.addrs.addr.name=.* -config api.addrs.addr.regex=true \
-  -config api.disablekey=true
+              docker run --detach --name zap -u zap -v\               
+                "$(pwd)/reports":/zap/reports/:rw \
+                -i owasp/zap2docker-stable zap.sh -daemon -host 0.0.0.0 -port 8080 \
+                -config api.addrs.addr.name=.* -config api.addrs.addr.regex=true \
+                -config api.disablekey=true
               docker exec zap zap-cli --verbose quick-scan  https://google-gruyere.appspot.com/409976138208656853771250675759008232039/
               docker exec zap zap-cli --verbose report -o /zap/reports/owasp-quick-scan-report.html --output-format html
                   
