--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -162,12 +162,14 @@ jobs:
             docker pull owasp/zap2docker-stable
             (
               docker run --detach --name zap -u root -v "$(pwd)/reports":/zap/reports/:rw \
-                -i owasp/zap2docker-stable zap-baseline.py -daemon -host 0.0.0.0 -port 8080 \
+                -i owasp/zap2docker-stable zap.sh -daemon -host 0.0.0.0 -port 8089 \
                 -config api.addrs.addr.name=.* -config api.addrs.addr.regex=true \
                 -config api.disablekey=true
-              docker exec zap zap-cli --verbose quick-scan  https://google-gruyere.appspot.com/409976138208656853771250675759008232039/
-              docker exec zap zap-cli --verbose report -o /zap/reports/owasp-quick-scan-report.html --output-format html
-                  
+              docker exec zap zap-cli -v start  
+              docker exec zap-cli -v quick-scan -l Informational --spider http://testhtml5.vulnweb.com/
+              docker exec zap-cli -v report -o /report.html -f html
+              docker exec zap-cli -v shutdown
+              
               if [ $? -ne 1 ]; then exit 0; else exit 1; fi;
             )
       - save_cache:
