--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -161,10 +161,10 @@ jobs:
           command: |
             docker pull owasp/zap2docker-stable
             (
-              docker run --detach --name zap -u zap -v "$(pwd)/reports":/zap/reports/:rw \
+             
+              docker run --name zap -u root -v "$(pwd)/reports":/zap/reports/:rw \
                 -i owasp/zap2docker-stable zap.sh -daemon -host 0.0.0.0 -port 8080 \
-                -config api.addrs.addr.name=.* -config api.addrs.addr.regex=true \
-                -config api.disablekey=true 
+                -config api.disablekey=true
               
               docker exec zap zap-cli -v quick-scan -l Informational --spider http://testhtml5.vulnweb.com/
               docker exec zap zap-cli -v report -o /report.html -f html
