--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -162,12 +162,12 @@ jobs:
             docker pull owasp/zap2docker-stable
             (
              
-              docker run --name zap -u root -v "$(pwd)/reports":/zap/reports/:rw \
+              docker run --detach --name zap -u root -v "$(pwd)/reports":/zap/reports/:rw \
                 -i owasp/zap2docker-stable zap.sh -daemon -host 0.0.0.0 -port 8080 \
                 -config api.disablekey=true
               
               docker exec zap zap-cli -v quick-scan -l Informational --spider http://testhtml5.vulnweb.com/
-              docker exec zap zap-cli -v report -o /report.html -f html
+              docker exec zap zap-cli -v report -o zap/reports/report.html -f html
               docker exec zap zap-cli -v shutdown
               
               if [ $? -ne 1 ]; then exit 0; else exit 1; fi;
