--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -164,8 +164,7 @@ jobs:
              
               docker run --detach --name zap -u root -v "$(pwd)/reports":/zap/reports/:rw \
                 -i owasp/zap2docker-stable zap.sh -daemon -host 0.0.0.0 -port 8080 \
-                -config api.disablekey=true && zap zap-cli -v quick-scan -l Informational --spider http://testhtml5.vulnweb.com/
-              
+                -config api.disablekey=true && exec zap zap-cli -v quick-scan -l Informational --spider https://google-gruyere.appspot.com/409976138208656853771250675759008232039/         
               docker exec zap zap-cli -v report -o zap/reports/report.html -f html
               docker exec zap zap-cli -v shutdown
               
