--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -166,7 +166,7 @@ jobs:
                 -i owasp/zap2docker-stable zap.sh -daemon -host 0.0.0.0 -port 8080 \
                 -config api.disablekey=true
               docker exec zap zap-cli --zap-path /zap start
-              docker exec zap zap-cli -v quick-scan --spider https://google-gruyere.appspot.com/409976138208656853771250675759008232039/
+              docker exec zap zap-cli -v quick-scan -l High --spider http://testhtml5.vulnweb.com/
               docker exec zap zap-cli -v report -o /zap/reports/report.html -f html
               docker exec zap zap-cli -v shutdown
               
