--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -119,11 +119,11 @@ jobs:
                 -i owasp/zap2docker-stable zap.sh -daemon -host 0.0.0.0 -port 8080 \
                 -config api.disablekey=true
               docker exec zap zap-cli --zap-path /zap start
-              docker exec zap zap-cli -v quick-scan --spider http://testhtml5.vulnweb.com/
-              docker exec zap zap-cli -v report -o /zap/reports/report.html -f html
-              docker exec zap zap-cli -v shutdown
+              docker exec zap zap-cli quick-scan --spider http://testhtml5.vulnweb.com/
+              docker exec zap zap-cli report -o /zap/reports/report.html -f html
+              docker exec zap zap-cli shutdown
               
-              if [ $? -ne 1 ]; then exit 0; else exit 1; fi;              
+                         
             )
       #- save_cache:
        #   key: zap-check-data-v1-{{ checksum "current_weak_information.txt" }}
