--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -123,7 +123,7 @@ jobs:
                 -config api.disablekey=true
               docker exec zap zap-cli --zap-path /zap -v start -o '-config api.disablekey=true'
               docker exec zap zap-cli -v quick-scan --spider http://testhtml5.vulnweb.com/
-              
+              docker exec zap zap-cli -v report -o /zap/reports/report.html -f html
               docker exec zap zap-cli -v shutdown
               
               if [ $? -ne 1 ]; then exit 0; else exit 1; fi;              
