--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ version: 2.1
 executors:
   scanner:
     docker:
-      - image: alpine:latest
+      - image: circleci/openjdk:11-jdk
   default:
     description: |
       This is default executor
@@ -14,7 +14,7 @@ executors:
 
 commands:
   setup-environment:
-    description: "Setup requirements"
+    description: "Setup Sonarcloud requirements"
     steps:
       - run:
           name: "Setup environment"
