--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -145,8 +145,8 @@ jobs:
         type: env_var_name
         default: SONAR_ORGANIZATION
       host_url:
-        type: string
-        default: "https://sonarcloud.io"
+        type: env_var_name
+        default: SONAR_URL
       login:
         type: env_var_name
         default: SONAR_TOKEN
