--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -103,14 +103,19 @@ jobs:
           # error codes 2 & 3 indicate WARN or other, and should not break the run
           name: Run OWASP ZAP Baseline
           command: |
+            read -p "URL to check: " url
+            if curl --output /dev/null --silent --head --fail "http://www.itsecgames.com"; then
+              printf '%s\n' "http://www.itsecgames.com exist"
+            else
+              printf '%s\n' "http://www.itsecgames.com does not exist"
+            fi
             docker run  --name zap -i owasp/zap2docker-stable \
               zap-cli quick-scan \
               --self-contained \
               --start-options '-config api.disablekey=true' \
               --spider\
               http://localhost:9000          
-            docker run -v $(pwd):/zap/wrk/:rw -t owasp/zap2docker-stable zap-baseline.py \
-              -t http://www.itsecgames.com -g gen.conf -r testreport.html
+           
             #  docker run -i owasp/zap2docker-stable zap-cli quick-scan --self-contained \
              #   --start-options --spider '-config api.disablekey=true' https://google-gruyere.appspot.com/409976138208656853771250675759008232039/
               #docker run --name zap -u root -v "$(pwd)/reports":/zap/reports/:rw \
