--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -103,18 +103,14 @@ jobs:
           # error codes 2 & 3 indicate WARN or other, and should not break the run
           name: Run OWASP ZAP Baseline
           command: |
-            read -p "http://www.itsecgames.com" url
-            if curl --output /dev/null --silent --head --fail "$url"; then
-              printf '%s\n' "$url exist"
-            else
-              printf '%s\n' "$url does not exist"
-            fi
+            curl -Is http://localhost:9000 | head -1
             docker run  --name zap -i owasp/zap2docker-stable \
               zap-cli quick-scan \
               --self-contained \
               --start-options '-config api.disablekey=true' \
               --spider\
               http://localhost:9000
+              
             #  docker run -i owasp/zap2docker-stable zap-cli quick-scan --self-contained \
              #   --start-options --spider '-config api.disablekey=true' https://google-gruyere.appspot.com/409976138208656853771250675759008232039/
               #docker run --name zap -u root -v "$(pwd)/reports":/zap/reports/:rw \
